# eu4-WGS

./: .gitignore  README.md  __init__.py  generate_world.py  main.py  pyproject.toml  requirements.txt  todo.md
.devin/: blueprint.yaml
.github/workflows/: add-nodes.yml  python-app.yml
additional data/: empty + add
analytics/: __init__.py  dashboard.py  heightmap_analyzer.py
assets/: assets.
common/: __init__.py  io_utils.py
content/: __init__.py  world_content.py
dashboard_output/: analytics_dashboard.html
engine/: __init__.py  climate_generation.py  map_generation.py  tunnel_generation.py
eu4_wgs_v8/: __init__.py
eu4gen/: constants.py  country.py  cultures.py  economy.py  exporter.py  external_data_loader.py  leaders.py  localization.py  map_engine.py  map_writers.py  religion.py  render.py  ui.py
export/: __init__.py  et_compatibility.py  eu4_exporter.py  template_exporter.py
gui/: __init__.py  studio.py
resources/: __init__.py  name_lists.py
resources/name_lists/: _all_names.txt  _country_names.txt  altaic_culture.txt  andean_group_culture.txt  baltic_culture.txt  british_culture.txt  burman_culture.txt  byzantine_culture.txt  carribean_culture.txt  caucasian_culture.txt  central_american_culture.txt  chonan_culture.txt  east_asian_culture.txt  east_slavic_culture.txt  eastern_aryan_culture.txt  finno_ugric_culture.txt  french_culture.txt  gaelic_culture.txt  germanic_culture.txt  (+21 more)
scripts/: remove_emblem_backgrounds.py
src/: index.css
templates/: hi-there  hi_there
test/: test_dashboard.py  test_external_data_loader.py  test_io_utils.py  test_localization.py  test_name_lists.py
(+98 files in other folders)
